2005-11-01  Sebastien Pouliot  <sebastien@ximian.com>

	CodeDomProvider.cs: Added missing 2.0 methods. Added CAS permissions.
	Added protection against NullReferenceException when no config is
	available.

2005-10-29  Sebastien Pouliot  <sebastien@ximian.com>

	CodeDomProvider.cs: Stubbed a few 2.0 methods to fix API errors in 
	derived classes.

2005-10-25  Sebastien Pouliot  <sebastien@ximian.com>

	* CompilerError.cs: Added LinkDemand for Unrestricted before 2.0.
	* CompilerErrorCollection.cs: Added LinkDemand for Unrestricted before
	2.0.

2005-10-25  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* CodeGenerator.cs: Fixed OutputAttributeArgument not to assume the
	default value is null (it's String.Empty).

2005-10-25  Sebastien Pouliot  <sebastien@ximian.com>

	* CompilerParameters.cs: Added [ComVisible(false)] on the new (2.0)
	EmbeddedResources and LinkedResources properties.
	* TempFileCollection.cs: Changed BasePath property to use Path.
	GetTempPath (Environment check) and added the PathDiscovery check on
	the combined result. Fixed TempDir so it's value never change (i.e. 
	imply that it doesn't need any permissions). Fixed SyncRoot to always 
	return null.

2005-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeGeneratorOptions.cs: Fixed how properties are kept inside the
	IDictionary (which is just like System.Web.dll).
	* CompilerError.cs: Added [Serializable] attribute for 2.0.
	* CompilerInfo.cs: Added LinkDemand for Unrestricted. Stubbed new 
	(2.0) CreateDefaultCompilerParameters method.
	* CompilerParameters.cs: Added LinkDemand and InheritanceDemand for
	Unrestricted. Added Demand for ControlEvidence to Evidence property.
	Added new (2.0) EmbeddedResources and LinkedResources properties.
	* CompilerResults.cs: Added LinkDemand and InheritanceDemand for 
	Unrestricted. Added Demand for ControlEvidence to Evidence property.
	* Executor.cs: Added LinkDemand for Unrestricted. Added support for 
	userToken (impersonation).